Downgraded to java 1.8